        PR tree-optimization/31699         * tree-vect-analyze.c (vect_update_misalignment_for_peel): Remove wrong         code.         (vect_enhance_data_refs_alignment): Compute peel amount using         TYPE_VECTOR_SUBPARTS instead of vf.         * tree-vect-transform.c (vect_gen_niters_for_prolog_loop): Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@124375 138bc75d-0d04-0410-961f-82ee72b054a4